# AgentsNet

./: .gitignore  LiteralMessagePassing.py  README.md  main.py  pyproject.toml
scripts/: debug.sh  feishu_notify.sh  test.sh  test_gpt54_all_tasks_graphs.sh
tests/: test_literal_message_passing_errors.py  test_main_parallel.py
