[project]
name = "agentsnet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "datasets>=4.8.4",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.16",
    "langgraph>=1.1.9",
    "networkx>=3.6.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "scipy>=1.17.1",
]
